# music-sheet-reader

./: .gitignore  CMakeLists.txt  LICENSE  MusicSheet.cpp  README.md  msr_extract.cpp
libs/: CMakeLists.txt  cc_music_debug.cc  cc_music_debug.hh  cc_music_edit.cc  cc_music_edit.hh  cc_music_frames.cc  cc_music_frames.hh  cc_music_io.cc  cc_music_io.hh  cc_music_lines.cc  cc_music_lines.hh  cc_music_locate.cc  cc_music_locate.hh  cc_music_main.cc  cc_music_main.hh  cc_music_minor.cc  cc_music_minor.hh  cc_music_present.cc  cc_music_present.hh  cc_music_sheet.cc  cc_music_sheet.hh  cc_music_transform.cc  cc_music_transform.hh  cc_opencv_ultils.cc  cc_opencv_ultils.hh  music_debug.cc  music_error.hh  music_io.cc  music_io.hh  music_locate.cc  music_locate.hh  music_main.cc  music_main.hh  music_present.cc  music_present.hh  music_transform.cc  music_transform.hh  opencv_utils.cc  opencv_utils.hh
libs/locate/: cc_music_clefs.cc  cc_music_clefs.hh  cc_music_lines.cc  cc_music_lines.hh  cc_music_staves.cc  cc_music_staves.hh  cc_music_symbols.cc  cc_music_symbols.hh  classify.cc  classify.hh  clefs.cc  clefs.hh  contour.cc  contour.hh  lines.cc  lines.hh  match.cc  match.hh  staves.cc  staves.hh  symbols.cc  symbols.hh
utils/: CMakeLists.txt  opencv_utils.cc  opencv_utils.hh
